--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,76 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Open Sans', sans-serif;
 
+}
+
+.primary-text {
+    color: orange;
+}
+
+.btn-primary {
+    color: #FFFFFF;
+    font-size: 20px;
+    padding: 18px 36px;
+    background-color: #FD6E0A;
+    border-radius: 5px;
+    border: 0;
+}
+
+
+.header{
+    background-color: #FFF8F3;
+    background-image: url(../images/header_bg.png),url(../images/developer.png);
+    background-repeat: no-repeat;
+    background-position: bottom right,left;
+}
+
+/* Star head and nav */
+nav {
+    display: flex;
+    justify-content: space-between;
+    margin: 40px 180px;
+
+
+}
+
+
+
+.font-tittle {
+    font-weight: 800;
+    font-size: 45px;
+}
+
+nav ul {
+    display: flex;
+    align-items: center;
+}
+
+nav li {
+    list-style: none;
+    margin-left: 10px;
+}
+
+/* Banner */
+.banner {
+    display: flex;
+    align-items: center;
+    margin: 180px;
+
+}
+
+.banner-title {
+    margin-bottom: 5px;
+}
+
+.banner-sub-title {
+    margin-bottom: 20px;
+    width: 498px;
+
+}
+
+.banner-description{
+    color: #757575;
+    margin-bottom: 35px;
 }
