--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,5 @@
 * {
     margin: 0;
-    padding: 0;
     font-family: 'Open Sans', sans-serif;
 
 }
@@ -19,18 +18,18 @@
 }
 
 
-.header{
+.header {
     background-color: #FFF8F3;
-    background-image: url(../images/header_bg.png),url(../images/developer.png);
+    background-image: url(../images/header_bg.png), url(../images/developer.png);
     background-repeat: no-repeat;
-    background-position: bottom right,left;
+    background-position: bottom right, left;
 }
 
 /* Star head and nav */
 nav {
     display: flex;
     justify-content: space-between;
-    margin: 40px 180px;
+    padding: 40px 180px;
 
 
 }
@@ -56,7 +55,7 @@ nav li {
 .banner {
     display: flex;
     align-items: center;
-    margin: 180px;
+    padding: 180px;
 
 }
 
@@ -70,7 +69,59 @@ nav li {
 
 }
 
-.banner-description{
+.banner-description {
     color: #757575;
     margin-bottom: 35px;
+}
+
+/* Main */
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+   
+
+}
+
+.about {
+    margin-top: 130px;
+    background: #FFF8F3;
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    
+}
+
+.about-title {
+    
+    margin-bottom: 30px;
+}
+
+.about-description {
+    color: #757575;
+    margin-bottom: 30px;
+}
+.infor-conntainer{
+    display: flex;
+    justify-content: space-around;
+    
+}
+.section-titel{
+    color:  #757575;
+
+}
+.section-description{
+    color:  #757575;
+
+}
+/* what i do */
+.what-i-do{
+    margin-top: 130px;
+    text-align: center;
+}
+.what-title{
+    margin-bottom: 30px;
+}
+.skills-description{
+    color: #757575;
+    
 }
